--- a/Feature_Engineering.ipynb
+++ b/Feature_Engineering.ipynb
@@ -15,7 +15,7 @@
    "id": "eeabfd5c-f987-44d9-aadc-89409e63af4a",
    "metadata": {},
    "source": [
-    "# CDC_Capstone:  Part III - Feature Engineering"
+    "# CDC_Capstone:  Part II - Feature Engineering"
    ]
   },
   {
@@ -79,7 +79,7 @@
    "source": [
     " \n",
     "# Reading from my local directory  is much faster\n",
-    "Class : method run will do the follow:\n",
+    "Class : Create a class and method to do the following\n",
     "\n",
     "1. take a list of names. For example: ['menhealth','menhealth','physical','dietary,heart','sex,edu','all']\n",
     "2. each name will call another function to read the local directory and retrieve the CSV adn return it as a df\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c249f9df-f26a-467d-914b-3a205e024a9b",
    "metadata": {},
    "outputs": [],
@@ -98,6 +98,16 @@
     "#read in all the data from your local directory.\n",
     "data = prepared_data.run()\n",
     " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "92c34df9-c514-478e-a499-b0bc507ed3d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = data['all']"
    ]
   },
   {
@@ -113,9 +123,28 @@
    "id": "11c9b878-1b0b-4980-abd0-03624251d7eb",
    "metadata": {},
    "source": [
-    " I will use quartiles to address outliers.  \n",
-    "Pros: I may not accurately identify anomolies. \n",
+    "I will use quartiles to address outliers identified in Getting To Know the Data - Part I.  \n",
+    "Pros: Data maybe anonmies and not true outliers.  I maybe deleting important data for my analysis\n",
     "Cons:  I will increase my logistic model performance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2984997-55e1-420b-924b-220f8281a921",
+   "metadata": {},
+   "source": [
+    "## review boxplot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d565d69e-7e2a-4d45-8183-8249eb4e9ecf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#box plot columns in the data to show large variances in data\n",
+    "plt.boxplot(df[['Income','GenHlth','MentHlth','PhysHlth','DiffWalk']]);"
    ]
   },
   {
