--- a/Html_Testing.ipynb
+++ b/Html_Testing.ipynb
@@ -1890,11 +1890,12 @@
     "]\n",
     "\n",
     "\n",
+    "\n",
     "treatment = [\n",
-    "   \"To address large variances and outliers in Mental Health and Physical Health Dat, I used the IQR method to remove the outliers for Mental Health and Physical Health data.  The risk is I may not have accurately identify anomolies and removed critcal data for analysis however my model performance will be improved.\"\n",
-    "\n",
-    "\n",
-    "\n",
+    "    \"Purpose of this Section:\",\n",
+    "    \"1- Address Outliers using IQR method\", \n",
+    "    \"2- Replace codes with label for better interprepation of data\",  \n",
+    "    \"3- Create datasets needed for the dashboard notebook\"\n",
     "]"
    ]
   },
@@ -1908,7 +1909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 158,
    "id": "868cb133-8717-436b-80b4-265ee91d700c",
    "metadata": {
     "scrolled": true
@@ -1929,7 +1930,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x125e316adc0>"
+       "<IPython.lib.display.IFrame at 0x125e2d21850>"
       ]
      },
      "metadata": {},
@@ -2121,7 +2122,7 @@
     "    ,\n",
     "     html.Div(\n",
     "    children=[\n",
-    "        html.A(\"box plot shows large variances and outliers in Mental Health and Physical Health Data. This diffently presents a skewed distribution. Since, the data is categorical data, I will use a categorical response to determine the probability of diabetes based the most prominent features identified in my heatmap. According to the stats, there is a 30point difference from min and max for Mental and Physical Health data\")\n",
+    "        html.A(\"box plot shows large variances and outliers in Mental Health and Physical Health Data. This can affect my model performance.  Also, since the data is categorical data, I will use a categorical response to determine the probability of diabetes based the most prominent features identified in my heatmap. According to the stats, there is a 30point difference from min and max for Mental and Physical Health data\")\n",
     "        ])\n",
     "     \n",
     "    ,\n",
@@ -2130,6 +2131,12 @@
     "     html.Div(\n",
     "    children=[\n",
     "        html.H2(\"Step 2: Feature Engineered & Aggregated data\")\n",
+    "    ])\n",
+    "    ,\n",
+    "     html.Div([\n",
+    "    html.Ul([\n",
+    "        html.Li(step) for step in treatment\n",
+    "      ])\n",
     "    ])\n",
     "    ,\n",
     "    html.Div([ summary_table])\n",
