--- a/my_functions.ipynb
+++ b/my_functions.ipynb
@@ -215,14 +215,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "5bbc6166-c8a6-48de-9969-b424736f50d2",
    "metadata": {},
    "outputs": [],
    "source": [
     "def update_labels(df):\n",
     "    \"\"\"\n",
-    "    Replace a few of the area names using the REPLACE_AREA dictionary.\n",
+    "    Replace a few of the column names using the zip functions.\n",
     "\n",
     "    Parameters\n",
     "    ----------\n",
@@ -232,28 +232,28 @@
     "    -------\n",
     "    df : DataFrame\n",
     "    \"\"\"\n",
-    "    people = df \n",
-    "    people['Gender'] = np.where(people['Sex'] ==0, 'men', 'women')\n",
-    "    people['Type'] = np.where(people['Diabetes_binary'] ==0, 'nondiabetic', 'diabetic')\n",
+    "     \n",
+    "    df['Gender'] = np.where(df['Sex'] ==0, 'men', 'women')\n",
+    "    df['Type'] = np.where(df['Diabetes_binary'] ==0, 'nondiabetic', 'diabetic')\n",
     "    definitions = pd.Series([0, \"Excellent\", \"Very good\", \"Good\", \"Fair\",\"Poor\",\"UNKNOWN\"], dtype=\"category\")\n",
     "    \n",
     "    reversefactor = dict(zip(range(7),definitions)) \n",
-    "    people['GeneralHealth'] = np.vectorize(reversefactor.get)(people[['GenHlth']])\n",
+    "    df['GeneralHealth'] = np.vectorize(reversefactor.get)(df[['GenHlth']])\n",
     "    definitions = pd.Series([0, \"<10K\", \"10-15K\", \"15-20K\", \"20-25K\",\"25K-35K\",\"35-50K\",\"50-75K\",\"75>\"], dtype=\"category\")\n",
     "    reversefactor = dict(zip(range(9),definitions))\n",
     "    \n",
-    "    people['income'] = np.vectorize(reversefactor.get)(people[['Income']])\n",
+    "    df['income'] = np.vectorize(reversefactor.get)(df[['Income']])\n",
     "    \n",
-    "    definitions = pd.Series([0, \"None\", \"1-8\", \"9-11\", \"12orGED\",\"C1-3\",\"C4+\"], dtype=\"category\")\n",
+    "    definitions = pd.Series([0, \"None\", \"Grade1-8\", \"Grade9-11\", \"12orGED\",\"Colleg1-3\",\"College4+\"], dtype=\"category\")\n",
     "    reversefactor = dict(zip(range(7),definitions))\n",
-    "    people['education'] = np.vectorize(reversefactor.get)(people[['Education']])\n",
+    "    df['education'] = np.vectorize(reversefactor.get)(df[['Education']])\n",
     " \n",
-    "    return people"
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "a0b2ddcc-9dbc-4ee3-82d3-2343d8c30649",
    "metadata": {},
    "outputs": [],
