--- a/Feature_Engineering.ipynb
+++ b/Feature_Engineering.ipynb
@@ -1821,7 +1821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 70,
    "id": "134d08c9-5ccc-4b36-8a2d-8643012f3224",
    "metadata": {},
    "outputs": [],
@@ -1832,69 +1832,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "06036756-a92c-4eb7-8e72-ffca7f1435ab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#create a subset of data\n",
-    "data_dic['menhealth_data'] = df[['Diabetes_binary','Type', 'MentHlth','Gender' ]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 71,
    "id": "3ed3b3cd-593b-46f1-8f20-0630a20a7edb",
    "metadata": {},
    "outputs": [],
    "source": [
     "#create a subset of data\n",
-    "data_dic['genhealth_data'] = df[['Diabetes_binary','Type','GeneralHealth', 'Gender' ]]"
+    "data_dic['genhealth'] = df[['Diabetes_binary','Type','GeneralHealth', 'Gender' ]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 72,
    "id": "efa98c93-2658-418f-a9ca-40704c6bf77c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dic['dietary_data'] = df[['Diabetes_binary', 'Fruits','Veggies','Gender','Type']]  "
+    "data_dic['dietary'] = df[['Diabetes_binary', 'Fruits','Veggies','Gender','Type']]  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 73,
    "id": "ea06387f-feed-42b1-bb22-327d7af42dda",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dic['heart_data'] = df[['Diabetes_binary','HeartDiseaseorAttack' , 'Gender','Type' ]]"
+    "data_dic['heart'] = df[['Diabetes_binary','HeartDiseaseorAttack' , 'Gender','Type' ]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 74,
    "id": "d3490365-7e35-490b-9a96-fab243c0dfcf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dic['sex_data'] = df[['Diabetes_binary', 'Gender']]"
+    "data_dic['sex'] = df[['Diabetes_binary', 'Gender']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 75,
    "id": "39eec1b7-71c2-478d-b17a-b853fb77d19f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dic['edu_data'] = df[['Diabetes_binary', 'education','Type']]"
+    "data_dic['edu'] = df[['Diabetes_binary', 'education','Type']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 76,
+   "id": "11472c8e-bf2e-4bc2-b997-6df87d81f5d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_dic['all'] =df[['Diabetes_binary','Gender',\t'GeneralHealth','GenHlth',\t'Type',\t'income','Income',\t'education','Education']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "id": "ea19fba3-6a80-48ae-a245-0952bc733d68",
    "metadata": {
     "scrolled": true
