--- a/Html_Testing.ipynb
+++ b/Html_Testing.ipynb
@@ -2,21 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 162,
    "id": "06f3cd82-2ea7-43e0-a4cd-5529f4500e0f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Everydayuse\\AppData\\Local\\Temp\\ipykernel_13592\\2262012867.py:4: UserWarning: \n",
-      "The dash_html_components package is deprecated. Please replace\n",
-      "`import dash_html_components as html` with `from dash import html`\n",
-      "  import dash_html_components as html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import dash\n",
     "from jupyter_dash import JupyterDash\n",
@@ -2483,7 +2472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 163,
    "id": "868cb133-8717-436b-80b4-265ee91d700c",
    "metadata": {
     "scrolled": true
@@ -2504,7 +2493,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x278f9966ac0>"
+       "<IPython.lib.display.IFrame at 0x27883e46250>"
       ]
      },
      "metadata": {},
