--- a/Html_Testing2.ipynb
+++ b/Html_Testing2.ipynb
@@ -1495,7 +1495,9 @@
   {
    "cell_type": "markdown",
    "id": "59dfd148-82fe-4fd6-b5ef-e54c8cc3d52f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Columnin info - Summary table"
    ]
@@ -2128,6 +2130,37 @@
     "    Output('gen-health-output', 'children'),\n",
     "    [ Input('gen_health_id', 'value')]\n",
     ")\n",
+    "\n",
+    "###############################################\n",
+    "### def for graph\n",
+    "def change_area_graphs(avg_cell, avg_data):\n",
+    "    \"\"\"\n",
+    "    Change the all three graphs in the upper right hand corner of the app\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    avg_cell : dict with keys `row` and `cell` mapped to integers of cell location\n",
+    "    \n",
+    "    avg_data : list of dicts of one country per row.\n",
+    "    Returns\n",
+    "    -------\n",
+    "    List of three plotly figures, one for each of the `Output`\n",
+    "    \"\"\"\n",
+    "    row_number = avg_cell[\"row\"]\n",
+    "    row_data = avg_data[row_number]\n",
+    "    types = row_data['types']\n",
+    "    print(\"active_cell\", avg_cell, \n",
+    "          \"\\nrow_number\", row_number, \n",
+    "          \"\\nrow_data\", row_data, \n",
+    "          \"\\ntypes\", types)\n",
+    "    \n",
+    "    #convert type to a number\n",
+    "    df_summary = prepared_data.read_local_data('summary', 'data/prepared')\n",
+    "    #fig = new_create_subplots(my_data,types)\n",
+    " \n",
+    "    fig = create_feature_plot_by_type(type)\n",
+    "    return fig\n",
+    "############################\n",
     "\n",
     "def callback_b(gen_health_value):\n",
     "    return 'Youve selected \"{}\"'.format(gen_health_value)\n",
