--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -121,7 +121,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = prepared_data.run()"
+    "#read in all the data from your local directory.\n",
+    "data = prepared_data.read_local_data('all', 'data/prepared')\n",
+    " "
    ]
   },
   {
@@ -438,7 +440,9 @@
   {
    "cell_type": "markdown",
    "id": "11b0ae60",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### Step 3: run functions using csv file and write accuracy results to dataframe"
    ]
@@ -1731,7 +1735,9 @@
    "cell_type": "code",
    "execution_count": 55,
    "id": "73d7c64e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1844,9 +1850,7 @@
    "cell_type": "code",
    "execution_count": 62,
    "id": "16ded94f",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
