--- a/Html_Testing.ipynb
+++ b/Html_Testing.ipynb
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 71,
    "id": "0b3e012c-1db8-4219-ab7a-ae4d1324f323",
    "metadata": {},
    "outputs": [],
@@ -993,29 +993,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 72,
    "id": "be968fa5-c8a5-4823-a3ba-488691d7afa3",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Everydayuse\\AppData\\Local\\Temp\\ipykernel_14824\\2677516652.py:1: UserWarning:\n",
-      "\n",
-      "\n",
-      "The dash_table package is deprecated. Please replace\n",
-      "`import dash_table` with `from dash import dash_table`\n",
-      "\n",
-      "Also, if you're using any of the table format helpers (e.g. Group), replace \n",
-      "`from dash_table.Format import Group` with \n",
-      "`from dash.dash_table.Format import Group`\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "from dash_table import DataTable"
@@ -3249,7 +3232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 87,
    "id": "868cb133-8717-436b-80b4-265ee91d700c",
    "metadata": {
     "scrolled": true
@@ -3270,7 +3253,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2b1ec7b7070>"
+       "<IPython.lib.display.IFrame at 0x2b1ef667730>"
       ]
      },
      "metadata": {},
@@ -3294,7 +3277,15 @@
     "app.layout = html.Div([\n",
     "    link, \n",
     "    banner_item,  \n",
-    "    doctorcat_item, \n",
+    "    doctorcat_item,\n",
+    "     ########################################################\n",
+    "    ############# Prediction output ######################\n",
+    "    \n",
+    "    html.Div(\n",
+    "        children=[\n",
+    "            html.H1(\"Note: drop downs are in a persistance state.  click new values in all the fields to populate a prediction\")\n",
+    "        ])\n",
+    "    ,\n",
     "    ########################################################################################################\n",
     "    ################## Define input and out for income drop down ###########################################\n",
     "    #######################################################################################################\n",
@@ -3396,18 +3387,16 @@
     "    ),\n",
     "    ######################################################################\n",
     "    ##################  OUTPUT VALUE for income #######################\n",
-    "    \n",
-    "    html.Div(id='diff-output')\n",
-    "    \n",
-    "    ########################################################\n",
-    "    ############# Prediction output ######################\n",
-    "    ,\n",
     "    html.Div(\n",
     "        children=[\n",
-    "            html.H1(\"Prediction Output:  Only display after all fields are entered\")\n",
+    "            html.H2(id='diff-output')\n",
     "        ])\n",
-    "    ,\n",
+    "    \n",
     "     \n",
+    "   # html.Div(id='diff-output')\n",
+    "    \n",
+    "   \n",
+    "    ,     \n",
     "    html.Div(id='prediction-output')\n",
     "    ,\n",
     "    \n",
@@ -3637,45 +3626,7 @@
     "    \n",
     "    ,\n",
     " ], style={'padding':10})  \n",
-    "########################################\n",
-    "####   Call back for prediction\n",
-    "########################################\n",
-    "#@app.callback(\n",
-    "#    Output('prediction-output', 'children'),\n",
-    "#    [Input('menu_income_id', 'gl_menu_income')],\n",
-    "###   # [ Input('gen_health_id', 'value')], \n",
-    "   # [ Input('phy_health_id', 'value')],\n",
-    "   # [ Input('men_health_id', 'value')],\n",
-    "   # [ Input('diff_id', 'value')],\n",
-    "     \n",
-    "     \n",
-    "#)\n",
-    "\n",
-    "def change_dropdowns(income_value):#, gen_health_id,phy_health_id,men_health_id, diff_id ):\n",
-    "    \"\"\"\n",
-    "    Change the graph \n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    gl_menu_income\n",
-    "    gl_gen_health = \"\"\n",
-    "    gl_phy_health = \"\"\n",
-    "    gl_men_health = \"\"\n",
-    "    gl_diff = \"\"\n",
-    "    Returns\n",
-    "    -------\n",
-    "    prediction\n",
-    "    \"\"\"   \n",
-    "    result = \"\"\n",
-    "    all_input_data =[]\n",
-    "    #convert type to a number\n",
-    "    result = prepared_data.make_prediction(all_input_data)\n",
-    "    if not all([gl_menu_income, gl_gen_health, gl_phy_health, gl_men_health, gl_diff]):\n",
-    "      return \"Please fill in all fields\"   \n",
-    "    all_input_data = [gl_menu_income, gl_gen_health, gl_phy_health, gl_men_health, gl_diff]\n",
-    "    \n",
-    "    return income_value\n",
-    "     \n",
+    " \n",
     "#########################################\n",
     "############ call back for income drop down\n",
     "###############################\n",
@@ -3688,6 +3639,7 @@
     "def callback_a(income_value):\n",
     "    # Access and use the global variable here\n",
     "    # For example:\n",
+    "    \n",
     "    return f\"You've selected: {income_value}\" \n",
     "\n",
     "#################################################3\n",
@@ -3727,14 +3679,25 @@
     "#################################################\n",
     "###### call back for phy health\n",
     "############################################\n",
+    "\n",
     "@app.callback(\n",
     "    Output('diff-output', 'children'),\n",
-    "    [ Input('diff_id', 'value')]\n",
+    "    [Input('diff_id', 'value')],\n",
+    "    [State('menu_income_id', 'value')],  # Add menu_income_id as a State\n",
+    "    [State('gen_health_id', 'value')],  # Add gen_health_id as a State\n",
+    "    [State('phy_health_id', 'value')],  # Add phy_health_id as a State\n",
+    "    [State('men_health_id', 'value')]  # Add men_health_id as a State\n",
     ")\n",
+    "def callback_e(diff_value, menu_income_id, gen_health_id, phy_health_id, men_health_id):\n",
+    "    # Access and use the variables here\n",
+    "    if not all([menu_income_id, gen_health_id, phy_health_id, men_health_id, diff_value]):\n",
+    "        return 'Youve selected \"{}\"'.format(diff_value)\n",
+    "    all_input_data = [menu_income_id, gen_health_id, phy_health_id, men_health_id, diff_value]\n",
+    "    label = prepared_data.get_label_by_value(menu_income, value_to_find)\n",
+    "    result = prepared_data.make_prediction(all_input_data)\n",
+    "     \n",
+    "    return result + \".  Refresh your browser to start again\"\n",
     "\n",
-    "def callback_e(diff_value):\n",
-    "    gl_diff = diff_value\n",
-    "    return 'Youve selected \"{}\"'.format(diff_value)\n",
     "############################################# \n",
     "if __name__ == '__main__':\n",
     "    app.run_server(debug=True,port=8054)\n"
@@ -3843,7 +3806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 78,
    "id": "c53c9d31-e242-4edd-971b-5829548aa9c6",
    "metadata": {},
    "outputs": [],
@@ -3858,7 +3821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 79,
    "id": "d44a9c78-f0eb-472f-b363-9fae89827f5a",
    "metadata": {},
    "outputs": [
@@ -3877,221 +3840,6 @@
     "value_to_find = 2\n",
     "label = prepared_data.get_label_by_value(menu_income, value_to_find)\n",
     "print(label)  # Output: '2 - Less than $15,000 ($10,000 to less than $15,000)'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "id": "cb715e53-909b-4660-9a85-f9180a9007c4",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"650\"\n",
-       "            src=\"http://127.0.0.1:8050/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2b1dc857f10>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "---------------------------------------------------------------------------\n",
-      "NameError                                 Traceback (most recent call last)\n",
-      "Cell In[68], line 92, in callback_a(income_value='')\n",
-      "     83 @app.callback(\n",
-      "     84     Output('income-output', 'children'),\n",
-      "     85     [Input('menu_income_id', 'value')]  #menu_income_id should be save\n",
-      "   (...)\n",
-      "     88 \n",
-      "     89 def callback_a(income_value):\n",
-      "     90     gl_gen_health = income_value #should be saved because of persistence\n",
-      "---> 92     if not all([menu_income_id, gen_health_id, phy_health_id]):\n",
-      "     93       return \"Please fill in all fields\"  \n",
-      "     94     #all_input_data = [gl_menu_income, gl_gen_health, gl_phy_health, gl_men_health, gl_diff]\n",
-      "\n",
-      "NameError: name 'menu_income_id' is not defined\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "from dash import Dash, dcc, html, Input, Output, callback\n",
-    "user_input_value =\"\"\n",
-    "app = Dash(__name__)\n",
-    "app.layout = html.Div([\n",
-    "    html.Div(\n",
-    "        children=[\n",
-    "            dcc.Dropdown(\n",
-    "                id='menu_income_id',\n",
-    "                options=menu_income,\n",
-    "                placeholder=\"Please choose your income range.\",\n",
-    "                value=user_input_value,\n",
-    "                persistence=True #store userinput value in input variable\n",
-    "            )\n",
-    "        ],\n",
-    "        style={\n",
-    "            \"display\": \"block\"\n",
-    "        }\n",
-    "    ),\n",
-    "    ######################################################################\n",
-    "    ##################  OUTPUT VALUE for income #######################\n",
-    "    \n",
-    "    html.Div(id='income-output'),\n",
-    "    \n",
-    "    #################################################################################################\n",
-    "    ###########  gen_health  ########################################################################\n",
-    "    ################################################################################################\n",
-    "    html.Div(  # Assuming user_input1 is a Div\n",
-    "    children=[\n",
-    "       dcc.Dropdown(\n",
-    "            id='gen_health_id',\n",
-    "            options=gen_health,\n",
-    "            placeholder=\"Please enter your general health code.\",\n",
-    "            value=user_input_value,\n",
-    "            persistence=True, #store user dropdown \n",
-    "        )\n",
-    "    ],\n",
-    "    style={\n",
-    "        \"display\": \"block\",  # Set display to block\n",
-    "      }\n",
-    "    ),\n",
-    "     ######################################################################\n",
-    "    ##################  OUTPUT VALUE for general health #######################\n",
-    "    \n",
-    "    html.Div(id='gen-health-output'),\n",
-    "    \n",
-    "    ################################################################################################\n",
-    "    html.Div(\n",
-    "        children=[\n",
-    "            dcc.Dropdown(\n",
-    "                id='phy_health_id',\n",
-    "                options=phy_health,\n",
-    "                placeholder=\"Please choose your physical health code.\",\n",
-    "                value=user_input_value,\n",
-    "                persistence=True, #store user dropdown \n",
-    "            )\n",
-    "        ],\n",
-    "        style={\n",
-    "            \"display\": \"block\"\n",
-    "        }\n",
-    "    ),\n",
-    "    ######################################################################\n",
-    "    ##################  OUTPUT VALUE for physical health days #######################\n",
-    "    \n",
-    "    html.Div(id='phy-health-output')\n",
-    "    ,\n",
-    "     html.Div(\n",
-    "        children=[\n",
-    "            html.H1(\"Prediction Output:  Only display after all fields are entered\")\n",
-    "        ])\n",
-    "    ,\n",
-    "     \n",
-    "    html.Div(id='prediction-output')\n",
-    "    \n",
-    "    \n",
-    "])\n",
-    "\n",
-    "\n",
-    " \n",
-    "#########################################\n",
-    "############ call back for income drop down\n",
-    "###############################\n",
-    "\n",
-    "@app.callback(\n",
-    "    Output('income-output', 'children'),\n",
-    "    [Input('menu_income_id', 'value')]  #menu_income_id should be save\n",
-    "    \n",
-    ")\n",
-    "\n",
-    "def callback_a(income_value):\n",
-    "    gl_gen_health = income_value #should be saved because of persistence\n",
-    "    \n",
-    "    if not all([menu_income_id, gen_health_id, phy_health_id]):\n",
-    "      return \"Please fill in all fields\"  \n",
-    "    #all_input_data = [gl_menu_income, gl_gen_health, gl_phy_health, gl_men_health, gl_diff]\n",
-    "    all_input_data = [gl_menu_income, gl_gen_health, gl_phy_health, 1, 1]\n",
-    "    result = prepared_data.make_prediction(all_input_data)\n",
-    "    return 'Youve selected \"{}\"'.format(income_value)\n",
-    "\n",
-    "#################################################3\n",
-    "########### call back for gen health ###########\n",
-    "#########################\n",
-    "@app.callback(\n",
-    "    Output('gen-health-output', 'children'),\n",
-    "    [ Input('gen_health_id', 'value')]\n",
-    ")\n",
-    "\n",
-    "def callback_b(gen_health_value):\n",
-    "    gl_gen_health = gen_health_value\n",
-    "    return 'Youve selected \"{}\"'.format(gen_health_value)\n",
-    "#################################################\n",
-    "###### call back for phy health\n",
-    "############################################\n",
-    "@app.callback(\n",
-    "    Output('phy-health-output', 'children'),\n",
-    "    [ Input('phy_health_id', 'value')]\n",
-    ")\n",
-    "\n",
-    "def callback_c(phy_health_value):\n",
-    "    gl_phy_health = phy_health_value\n",
-    "    return 'Youve selected \"{}\"'.format(phy_health_value)\n",
-    "\n",
-    "#################################################\n",
-    "###### call back for phy health\n",
-    "############################################\n",
-    "@app.callback(\n",
-    "    Output('men-health-output', 'children'),\n",
-    "    [ Input('men_health_id', 'value')]\n",
-    ")\n",
-    "\n",
-    "def callback_d(men_health_value):\n",
-    "    gl_men_health = men_health_value\n",
-    "    return 'Youve selected \"{}\"'.format(men_health_value)\n",
-    "\n",
-    "\n",
-    "\n",
-    "def change_dropdowns(income_value, genH_value, phy_value): #, gen_health_id,phy_health_id,men_health_id, diff_id ):\n",
-    "    \"\"\"\n",
-    "    Change the graph \n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "   \n",
-    "    -------\n",
-    "    prediction\n",
-    "    \"\"\"   \n",
-    "    result = \"\"\n",
-    "    all_input_data =[]\n",
-    "    #convert type to a number\n",
-    "    result = prepared_data.make_prediction(all_input_data)\n",
-    "    if not all([income_value, genH_value, phy_value]):\n",
-    "      return \"Please fill in all fields\"   \n",
-    "    #all_input_data = [gl_menu_income, gl_gen_health, gl_phy_health, gl_men_health, gl_diff]\n",
-    "      \n",
-    "    return income_value, dcc.Dropdown\n",
-    "  #  )\n",
-    "\n",
-    "\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    app.run(debug=True)\n"
    ]
   },
   {
