--- a/Html_Testing.ipynb
+++ b/Html_Testing.ipynb
@@ -3232,7 +3232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 93,
    "id": "868cb133-8717-436b-80b4-265ee91d700c",
    "metadata": {
     "scrolled": true
@@ -3253,7 +3253,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2b1ef667730>"
+       "<IPython.lib.display.IFrame at 0x2b1ef7b39a0>"
       ]
      },
      "metadata": {},
@@ -3283,7 +3283,7 @@
     "    \n",
     "    html.Div(\n",
     "        children=[\n",
-    "            html.H1(\"Note: drop downs are in a persistance state.  click new values in all the fields to populate a prediction\")\n",
+    "            html.H3(\"Note: drop downs are in a persistence state.  click new values in all the fields to populate a prediction.  The last field will calls the prediction.  It can take a copule minutes  to display\")\n",
     "        ])\n",
     "    ,\n",
     "    ########################################################################################################\n",
@@ -3291,7 +3291,7 @@
     "    #######################################################################################################\n",
     "    html.Div(\n",
     "        children=[\n",
-    "            dcc.Dropdown(\n",
+    "            'Please choose your income range.:',dcc.Dropdown(\n",
     "                id='menu_income_id',\n",
     "                options=menu_income,\n",
     "                placeholder=\"Please choose your income range.\",\n",
@@ -3313,7 +3313,7 @@
     "    ################################################################################################\n",
     "    html.Div(  # Assuming user_input1 is a Div\n",
     "    children=[\n",
-    "       dcc.Dropdown(\n",
+    "       \"Please enter your general health code:\",dcc.Dropdown(\n",
     "            id='gen_health_id',\n",
     "            options=gen_health,\n",
     "            placeholder=\"Please enter your general health code.\",\n",
@@ -3333,7 +3333,7 @@
     "    ################################################################################################\n",
     "    html.Div(\n",
     "        children=[\n",
-    "            dcc.Dropdown(\n",
+    "            \"Please choose your physical health code:\",dcc.Dropdown(\n",
     "                id='phy_health_id',\n",
     "                options=phy_health,\n",
     "                placeholder=\"Please choose your physical health code.\",\n",
@@ -3353,7 +3353,7 @@
     "    ################################################################################################\n",
     "     html.Div(\n",
     "        children=[\n",
-    "            dcc.Dropdown(\n",
+    "            \"Please choose your physical health range:\",dcc.Dropdown(\n",
     "                id='men_health_id',\n",
     "                options=men_health,\n",
     "                placeholder=\"Please choose your physical health range.\",\n",
@@ -3373,7 +3373,7 @@
     "    #################################\n",
     "     html.Div(\n",
     "        children=[\n",
-    "            dcc.Dropdown(\n",
+    "            \"Please choose number of days you had diffculty walking:\",dcc.Dropdown(\n",
     "                id='diff_id',\n",
     "                options=phy_health,\n",
     "                placeholder=\"Please choose number of days you had diffculty walking.\",\n",
