--- a/Html_Testing.ipynb
+++ b/Html_Testing.ipynb
@@ -1786,7 +1786,7 @@
     "from prepare import PrepareData\n",
     "#Testing - Read local data\n",
     "prepared_data = PrepareData(download_new=False)\n",
-    "data = prepared_data.run()"
+    "#data = prepared_data.run()"
    ]
   },
   {
@@ -3816,7 +3816,7 @@
     " \n",
     "#Testing - Read local data\n",
     "prepared_data = PrepareData(download_new=False)\n",
-    "data = prepared_data.run()"
+    "#data = prepared_data.read_local_data('all', 'data/prepared')"
    ]
   },
   {
