--- a/Html_Testing.ipynb
+++ b/Html_Testing.ipynb
@@ -3780,7 +3780,7 @@
     "        children=[\n",
     "            \"Please choose number of days you had diffculty walking:\",dcc.Dropdown(\n",
     "                id='diff_id',\n",
-    "                options=phy_health,\n",
+    "                options=diff,\n",
     "                placeholder=\"Please choose number of days you had diffculty walking.\",\n",
     "                value=user_input_value,\n",
     "                persistence=True, #store user dropdown \n",
