--- a/Html_Testing.ipynb
+++ b/Html_Testing.ipynb
@@ -406,6 +406,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "boxplot_img = Image.open(\"assets/boxplot.PNG\")\n",
     "boxplot_item = html.Div(\n",
     "    [\n",
     "        html.Div(\n",
@@ -1552,7 +1553,8 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "raw = pd.read_csv(\"https://archive.ics.uci.edu/static/public/891/data.csv\")\n",
+    "#raw = pd.read_csv(\"https://archive.ics.uci.edu/static/public/891/data.csv\")\n",
+    "raw = prepared_data.read_local_data('all', 'data/raw')\n",
     "raw.head()"
    ]
   },
