--- a/Html_Testing.ipynb
+++ b/Html_Testing.ipynb
@@ -555,6 +555,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "outliers_img = Image.open(\"assets/outliers.PNG\")\n",
     "outliers_item = html.Div(\n",
     "    [\n",
     "        html.Div(\n",
@@ -590,10 +591,7 @@
    "id": "fb883d50-9065-4427-8507-ca746e431000",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "updatecolumns_img = Image.open(\"assets/updateColumns.PNG\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -602,6 +600,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "updatecolumns_img = Image.open(\"assets/updateColumns.PNG\")\n",
+    "\n",
     "updatecolumns_item = html.Div(\n",
     "    [\n",
     "        html.Div(\n",
