--- a/Html_Testing.ipynb
+++ b/Html_Testing.ipynb
@@ -286,9 +286,7 @@
    "id": "b0ad9c3e-db5c-4630-ab03-e12bc296fb81",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "testing_img = Image.open(\"gif/PredictionProgram.gif\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -297,6 +295,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "testing_img = Image.open(\"gif/PredictionProgram.gif\")\n",
     "testing_item = html.Div(\n",
     "    [\n",
     "        html.Div(\n",
@@ -463,6 +462,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "Model_img = Image.open(\"assets/Model.PNG\")\n",
+    "\n",
     "Model_item = html.Div(\n",
     "    [\n",
     "        html.Div(\n",
